# pyModbus_V-Sensor

./: README.md  api.py  client.py  codec.py  config.yaml  pyproject.toml  registers.py  service.py
app_desktop/: main.py  run_streamlit.py
app_pi/: pymodbus-vsensor.service  service.py  vsensor.service
apps/: gui_app.py  headless_service.py
tests/: test_cli.py  test_client.py  test_codec.py  test_service.py
tools/: read_register.py  write_register.py
v_sensor_core/: client.py  codec.py  config.py  registers.py
